<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- 项目信息 -->
    <groupId>com.lw.graduation</groupId>
    <artifactId>graduation-system</artifactId>
    <version>1.0.0</version>
    <name>graduation-system</name>
    <description>高校毕业设计论文管理系统</description>
    <!--    <url></url>-->

    <!-- 许可证 -->
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <!-- 开发人员与团队 -->
    <developers>
        <developer>
            <name>lw</name>
            <email>lw3574910958@gmail.com</email>
            <organization>lw</organization>
            <organizationUrl>https://github.com/lw3574910958-sys</organizationUrl>
        </developer>
    </developers>

    <!-- 项目仓库 -->
    <scm>
        <connection>scm:git:https://github.com/lw3574910958-sys/graduation-system-boot.git</connection>
        <developerConnection>scm:git:git@github.com:lw3574910958-sys/graduation-system-boot.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/lw3574910958-sys/graduation-system-boot</url>
    </scm>

    <!-- 聚合项目 -->
    <packaging>pom</packaging>

    <!-- 子模块 -->
    <modules>
        <!-- bom 统一版本管理 -->
        <module>graduation-bom</module>
        <!-- 全局启动与全局配置模块 -->
        <module>graduation-application</module>
        <!-- 领域模型模块 -->
        <module>graduation-domain</module>
        <!-- 通用组件模块 -->
        <module>graduation-common</module>
        <!-- 基础设施模块 -->
        <module>graduation-infrastructure</module>
        <!-- api接口模块 -->
        <module>graduation-api</module>
        <!-- 认证模块 -->
        <module>graduation-auth</module>
        <!-- 用户模块 -->
        <module>graduation-user</module>
        <!-- 部门模块 -->
        <module>graduation-department</module>
        <!-- 选题模块 -->
        <module>graduation-topic</module>
        <!-- 选题选择模块 -->
        <module>graduation-selection</module>
        <!-- 文档模块 -->
        <module>graduation-document</module>
        <!-- 成绩模块 -->
        <module>graduation-grade</module>
        <!-- 通知公告模块 -->
        <module>graduation-notice</module>
        <!-- 仪表盘模块 -->
        <module>graduation-dashboard</module>
        <!-- 系统日志模块 -->
        <module>graduation-log</module>
        <!-- 代码生成模块 -->
        <module>graduation-codegen</module>
        <!-- 测试模块 -->
<!--        <module>graduation-test</module>-->
    </modules>

    <!-- 项目属性 -->
    <properties>
        <java.version>21</java.version>
        <spring-boot.version>3.5.10</spring-boot.version>
        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
        <!-- 编码 -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 引入bom -->
            <dependency>
                <groupId>com.lw.graduation</groupId>
                <artifactId>graduation-bom</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- 编译插件 -->
    <build>
        <plugins>
            <!-- 编译插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                    <parameters>true</parameters>
                </configuration>
            </plugin>

            <!-- Spring Boot插件 -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
            </plugin>
        </plugins>
    </build>

</project>
